v2022-03-17
  * all:
      格式化文档
  * vim:
      go 文件使用 tab 缩进

v2022-02-08.2
  * git:
      禁用了代理配置

v2022-02-08
  * git:
      增加了 Unicode 编码支持
  * terminator:
      修改了颜色

v2021-12-09.2
  * vim:
      禁用了一些插件
      匹配不再忽略大小写

v2021-12-09
  * apache:
      更新了配置
  * git:
      删除了安装脚本
  * hosts:
      移除
  * mplayer:
      移除
  * nano:
      移除
  * nvim:
      移除
  * pacman:
      移除
  * redshift:
      移除
  * terminator:
      更新了配置
  * tmux:
      更新了配置
  * udev:
      移除
  * vsftpd:
      更新了配置

v2021-10-22
  * vim:
      增加了插件 wakatime/vim-wakatime

v2021-10-13
  * git:
      更新了配置文件

v2021-10-09
  * bash & zsh:
      设置 gpg2 所需的环境变量
  * zsh
      修改了科学计算器的组合键

v2021-08-27
  * bash & zsh:
      不再加载 iam 插件

v2021-08-13
  * ssh:
      更新ssh 密钥
  * bash & zsh:
      禁用了loginTmux

v2019-12-02
  * bash & zsh:
      增加了ssh-forget
  * zsh:
      修改了MANPATH 错误问题
      修改了路径插件不加载的问题
  * vim:
      不再启用插件vim-markdown
  * terminator:
      修改了配置

v2018-07-15
  * ssh:
      更新ssh 密钥

v2017-09-26
  * tmux:
      更新了按键设置
  * zsh:
      修正了android_env 中错误的repo 脚本

v2017-06-15
  * zsh:
      启用插件zsh-syntax-highlighting

v2017-05-08
  * tig:
      配置中删除了与默认配置相同的部分

v2017-04-24
  * bash & zsh:
      修正了ipmi-boot 和ipmi-deattach 无法工作的问题
      修正了umount 目录失败的问题

v2017-04-14
  * bash & zsh:
      添加了插件ipmi

v2017-03-21
  * ssh:
      更新ssh 密钥

v2017-03-01.2
  * bash & zsh:
      调整了custom 插件的加载顺序

v2017-03-01.1
  * bash & zsh:
      调整了custom 插件的加载顺序

v2017-03-01
  * bash & zsh:
      增加插件custom
      删除了一条alias
  * vim:
      修改了README.md


v2017-01-30
  * apache:
      增加了一些autoindex
  * sysctl:
      增加了个人的sysctl 配置

v2017-01-11
  * bash & zsh:
      修改了一个出错信息未被忽略的错误
  * bash:
      增加了~/.bash_profile
  * zsh:
      暂时移除会导致终端退出的插件zsh-syntax-highlighting
      修改了iam 插件加载错误的问题
  * apache:
      增加了Arch Linux 下apache 配置文件
  * vsftpd:
      去除了配置文件的独立化设置

v2017-01-05.1
  * apache:
      使用Arch Linux 的包名作为目录名
      配置微调

v2017-01-05
  * vim: