@@ -20,11 +20,21 @@ filetype off                          " required
 set rtp+=~/.vim/bundle/Vundle.vim     " Vundle 路径
 call vundle#begin()                   " call vundle#begin('~/some/path/here')
 " 插件列表 {
+Plugin 'Matt-Deacalion/vim-systemd-syntax'
+Plugin 'Rip-Rip/clang_complete'
+Plugin 'Shougo/vimproc.vim'
+Plugin 'Shougo/vimshell.vim'
+Plugin 'SirVer/ultisnips'
+Plugin 'Valloric/ListToggle'
+Plugin 'Valloric/MatchTagAlways'
+"Plugin 'Valloric/YouCompleteMe'
+"Plugin 'Yggdroot/indentLine'
 Plugin 'airblade/vim-gitgutter'
 Plugin 'bling/vim-airline'
 Plugin 'briancollins/vim-jst'
 Plugin 'chrisbra/vim-diff-enhanced'
 Plugin 'easymotion/vim-easymotion'
+Plugin 'fatih/vim-go'
 Plugin 'flazz/vim-colorschemes'
 Plugin 'gmarik/Vundle.vim'
 Plugin 'godlygeek/tabular'
@@ -35,8 +45,8 @@ Plugin 'itchyny/calendar.vim'
 Plugin 'jlanzarotta/bufexplorer'
 Plugin 'kien/rainbow_parentheses.vim'
 Plugin 'lilydjwg/colorizer'
+Plugin 'lzap/vim-selinux'
 Plugin 'majutsushi/tagbar'
-Plugin 'Matt-Deacalion/vim-systemd-syntax'
 Plugin 'mbbill/fencview'
 Plugin 'mileszs/ack.vim'
 Plugin 'morhetz/gruvbox'
@@ -45,34 +55,25 @@ Plugin 'ntpeters/vim-better-whitespace'
 Plugin 'octol/vim-cpp-enhanced-highlight'
 Plugin 'pangloss/vim-javascript'
 "Plugin 'plasticboy/vim-markdown'             " godlygeek/tabular
-Plugin 'Rip-Rip/clang_complete'
 Plugin 'scrooloose/nerdcommenter'
 Plugin 'scrooloose/nerdtree'
 "Plugin 'scrooloose/syntastic'
-Plugin 'Shougo/vimproc.vim'
-Plugin 'Shougo/vimshell.vim'
-Plugin 'SirVer/ultisnips'
 Plugin 'terryma/vim-multiple-cursors'
 "Plugin 'tomasr/molokai'
 "Plugin 'uguu-org/vim-matrix-screensaver'
-Plugin 'Valloric/ListToggle'
-Plugin 'Valloric/MatchTagAlways'
-"Plugin 'Valloric/YouCompleteMe'
 Plugin 'vim-perl/vim-perl'
 Plugin 'vim-scripts/Align'
+"Plugin 'vim-scripts/DrawIt'
+Plugin 'vim-scripts/TaskList.vim'
+Plugin 'vim-scripts/TeTrIs.vim'
 Plugin 'vim-scripts/a.vim'
 "Plugin 'vim-scripts/bad-apple'
 Plugin 'vim-scripts/c.vim'
-"Plugin 'vim-scripts/DrawIt'
 Plugin 'vim-scripts/mru.vim'
 Plugin 'vim-scripts/spellcheck.vim'
 "Plugin 'vim-scripts/taglist.vim'
-Plugin 'vim-scripts/TaskList.vim'
-Plugin 'vim-scripts/TeTrIs.vim'
 Plugin 'wakatime/vim-wakatime'
 "Plugin 'yonchu/accelerated-smooth-scroll'
-"Plugin 'Yggdroot/indentLine'
-Plugin 'lzap/vim-selinux'
 " }
 call vundle#end()                     " 插件列表必须在此之前结束
 filetype plugin indent on
